--- a/src/static/stylesheets/index.scss
+++ b/src/static/stylesheets/index.scss
@@ -9,10 +9,39 @@
 
 @font-face {
     font-family: "PingFang";
-    src: url("@/static/fonts/pingfang_bold.ttf");
+    src: url("@/static/fonts/PingFangSC-Light.ttf")
+           url("@/static/fonts/PingFangSC-Semibold.ttf");
+}
+
+html,
+body {
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: #000;
     font-family: "PingFang";
+}
+
+/* Navigation active link indicator */
+nav a {
+    position: relative;
+    transition: all 0.3s ease;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav a.router-link-active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    width: 29px;
+    height: 4px;
+    transform: translateX(-50%);
+    background: linear-gradient(90deg, #8b5cf6, #6366f1);
+    border-radius: 2px;
 }
