--- a/src/static/stylesheets/index.scss
+++ b/src/static/stylesheets/index.scss
@@ -42,6 +42,6 @@ nav a.router-link-active::after {
     width: 29px;
     height: 4px;
     transform: translateX(-50%);
-    background: linear-gradient(90deg, #8b5cf6, #6366f1);
+    background: #fff;
     border-radius: 2px;
 }
